# ddr-ai-system

./: .gitignore  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/config/: settings.py
backend/app/routes/: ddr_route.py
backend/app/services/extractor/: extractor.py
backend/app/services/merger/: merger.py
backend/app/services/parser/: parser.py
backend/app/services/reasoning/: reasoning.py
backend/app/services/report_generator/: generator.py
frontend/: app.py
