[project]
name = "ddr-ai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "numpy>=2.4.4",
    "open-clip-torch>=3.3.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "rapidfuzz>=3.14.5",
    "reportlab>=4.5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.7.0",
    "uvicorn>=0.46.0",
]
